--- a/style.css
+++ b/style.css
@@ -13,3 +13,30 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+.barradepesquisa {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.barradepesquisa input {
+  padding: 10px;
+  font-size: 16px;
+  width: 300px;
+  border-radius: 5px 0 0 5px;
+  border: none;
+  outline: none;
+}
+
+.barradepesquisa button {
+  padding: 10px;
+  background-color: #ff6600;
+  border: none;
+  border-radius: 0 5px 5px 0;
+}
+
+.barradepesquisa button img {
+  width: 20px;
+  height: 20px;
+}
